k8s/bases/infrastructure/controllers/actions-runner-controller/namespace-runners.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arc-ksail-analysis
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    pod-security.kubernetes.io/enforce: restricted
